proto updated for consistent mac address
