# server/sensorService.go
@@ -49,14 +49,14 @@ func startSensorAPI(db *gorm.DB) {
 func (s server) StoreHumidityEntry(_ context.Context, request *pb.StoreHumidityRequest) (*pb.StoreHumidityReply, error) {
 	var sensor models.Sensor
 	result := s.db.Model(&models.Sensor{}).
-		Where(models.Sensor{SensorSlot: request.SensorId, DeviceId: request.DeviceId}).
+		Where(models.Sensor{SensorSlot: *request.SensorId, DeviceId: *request.DeviceId}).
 		First(&sensor).Error
 	sensorId := sensor.Sensor
 	if result != nil {
 		log.WithError(result).Error("Creating new Sensor.")
 		sensor := models.Sensor{
-			SensorSlot: request.SensorId,
-			DeviceId:   request.DeviceId,
+			SensorSlot: *request.SensorId,
+			DeviceId:   *request.DeviceId,
 			InUse:      false,
 		}
 		errCreateSensor := s.db.Model(&models.Sensor{}).Create(&sensor).Error
@@ -68,14 +68,15 @@ func (s server) StoreHumidityEntry(_ context.Context, request *pb.StoreHumidityR
 	}
 
 	err := s.db.Model(&models.HumidityEntry{}).Create(&models.HumidityEntry{
-		Sensor:    sensorId,
-		Value:     request.Humidity,
-		Timestamp: time.Now(),
+		Sensor:         sensorId,
+		Value:          *request.Humidity,
+		ValueInPercent: *request.HumidityInPercent,
+		Timestamp:      time.Now(),
 	}).Error
 	if err != nil {
-		log.Fatalf("Error: New Humidity Entry for Plant %d with value %d was not created. Errormessage: %s", request.RequestNumber, request.GetHumidity(), err.Error())
+		log.Fatalf("Error: New Humidity Entry for Plant %d with value %d was not created. Errormessage: %s", sensorId, request.GetHumidity(), err.Error())
 	} else {
-		log.Println("New Humidity Entry for Plant %i with value %i", request.RequestNumber, request.GetHumidity())
+		log.Println("New Humidity Entry for Plant %i with value %i", sensorId, request.GetHumidity())
 	}
 	return &pb.StoreHumidityReply{}, nil
 }
